--- a/index.html
+++ b/index.html
@@ -2,21 +2,38 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-  <title>Hello A-Frame</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+    <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
 </head>
 
-<body>
-  <a-scene>
-    <a-sky color="#DDEEFF">
-    </a-sky>
-    <a-box color="#4488FF" position="0 0 0" rotation="0 0 0"
-      animation="property: rotation; to: 360 360 0; dur: 4000; easing: linear; loop: true">
-    </a-box>
-    <a-camera position="0 0 2">
-    </a-camera>
-  </a-scene>
+<body style="margin: 0; overflow: hidden;">
+    <!-- <a-scene
+            renderer="logarithmicDepthBuffer: true;"
+            embedded
+            loading-screen="enabled: false;"
+            arjs="sourceType: webcam; debugUIEnabled: false;"
+        >
+            <a-assets>
+                <a-asset-item
+                    id="animated-asset"
+                    src="assets/asset.gltf"
+                ></a-asset-item>
+            </a-assets>
+
+                <a-entity
+                    look-at="[gps-camera]"
+                    animation-mixer="loop: repeat"
+                    gltf-model="#animated-asset"
+                    scale="0.364241310515091 0.364241310515091 0.364241310515091"
+                    gps-entity-place="latitude: 33.95761857832435; longitude: 131.27513830700195;"
+                ></a-entity>
+
+            <a-camera gps-camera rotation-reader></a-camera>
+        </a-scene> -->
 </body>
 
 </html>
