--- a/rocation/index.html
+++ b/rocation/index.html
@@ -2,24 +2,24 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
-    <title>Hello AR.js World! Step2</title>
+  <meta charset="utf-8" />
+  <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+  <title>Hello AR.js World! Step2 (static)</title>
 </head>
 
 <body style="margin: 0; overflow: hidden;">
-    <a-scene id="scene" vr-mode-ui="enabled: false;" loading-screen="enabled: false;"
-        renderer="logarithmicDepthBuffer: true;" arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
-        embedded>
-        <a-assets>
-            <a-asset-item id="asset-eevee" src="./assets/asset.gltf"></a-asset-item>
-        </a-assets>
+  <a-scene vr-mode-ui="enabled: false;" loading-screen="enabled: false;" renderer="logarithmicDepthBuffer: true;"
+    arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;" embedded>
+    <a-assets>
+      <a-asset-item id="asset-eevee" src="../assets/asset.gltf"></a-asset-item>
+    </a-assets>
 
-        <a-camera gps-camera arjs-look-controls='smoothingFactor: 0.1' rotation-reader></a-camera>
-    </a-scene>
+    <a-entity name="Example" gltf-model="#asset-eevee" scale="0.75 0.75 0.75"
+      gps-entity-place="latitude: 33.95761857832435; longitude: 131.27513830700195;"></a-entity>
 
-    <script src="./app.js"></script>
+    <a-camera gps-camera rotation-reader></a-camera>
+  </a-scene>
 </body>
 
 </html>
